--- a/environment.yaml
+++ b/environment.yaml
@@ -3,7 +3,7 @@ channels:
 - defaults
 - conda-forge
 dependencies:
-- python=3.9.9
+- python>=3.9.9
 - pip>=21.3.1
 - conda>=4.11.0
 - pip:
@@ -14,4 +14,3 @@ dependencies:
     - torch>=1.10.1
     - mujoco_py>=2.1.2.14
     - -e envs/gym-gmazes
-# acme, graphs, sonnet
