--- a/environment.yaml
+++ b/environment.yaml
@@ -10,6 +10,7 @@ dependencies:
     - psutil>=5.8.0
     - numpy>=1.21.5
     - matplotlib>=3.5.1
+    - joblib>=1.1.0
     - gym>=0.21.0
     - torch>=1.10.1
     - mujoco_py>=2.1.2.14
