--- a/environment.yaml
+++ b/environment.yaml
@@ -15,7 +15,7 @@ dependencies:
     - Pillow>=9.0.1
     - ipywidgets>=7.6.5
     - jax>=0.3.23
-    - flax>=0.5.0,<0.6.0
+    - flax>=0.6.3
     - optax>=0.1.2
     - brax>=0.0.10
     - tensorflow-probability>=0.15.0
