--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -35,7 +35,7 @@ jobs:
 
             - name: Build documentation
               run: |
-                  sphinx-build doc _build -W
+                  sphinx-build doc _build
             - name: Deploy to GitHub Pages
               uses: peaceiris/actions-gh-pages@v3
               if: ${{ github.event_name == 'push' && github.ref == 'refs/heads/main' }}
@@ -44,4 +44,3 @@ jobs:
                   github_token: ${{ secrets.GITHUB_TOKEN }}
                   publish_dir: _build/
                   force_orphan: true
- 
